--- a/7/riot-webpack/package.json
+++ b/7/riot-webpack/package.json
@@ -8,7 +8,6 @@
     "clean:riot": "rimraf ./dist/tags/*",
     "clean:js": "rimraf ./dist/js/*",
     "build": "npm-run-all clean build:*",
-    "build:riot": "riot --esm src/tags dist/tags",
     "build:webpack": "webpack --config webpack.dev.js",
     "test": "test"
   },
@@ -28,6 +27,8 @@
     "node-sass": "^4.10.0",
     "npm-run-all": "^4.1.5",
     "rimraf": "^2.6.2",
+    "riot-compiler": "^3.5.2",
+    "riot-tag-loader": "^2.1.0",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
     "uglifyjs-webpack-plugin": "^2.0.1",
