--- a/7/riot-webpack/package.json
+++ b/7/riot-webpack/package.json
@@ -14,14 +14,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "riot": "^3.13.2"
+    "riot": "^3.13.2",
+    "riot-route": "^3.1.4"
   },
   "devDependencies": {
     "@babel/core": "^7.1.6",
+    "@babel/preset-env": "^7.2.0",
     "@webpack-cli/init": "^0.1.2",
     "babel-loader": "^8.0.4",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
-    "babel-preset-env": "^1.7.0",
     "clean-webpack-plugin": "^1.0.0",
     "css-loader": "^1.0.1",
     "node-sass": "^4.10.0",
